# micro-sip-nextcloud-bridge

./: .gitignore  Dockerfile  README.md  build.json  config.env  example.env  pyproject.toml
.github/workflows/: build_and_publish.yml
src/micro_sip_nextcloud_bridge/: __init__.py  __main__.py  settings.py
